[project]
name = "cognito_client"
version = "0.0.1"
authors = [
  { name="Anthony Lukach", email="anthony@developmentseed.com" },
  { name="Aimee Barciauskas", email="aimee@developmentseed.com" }
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/developmentseed/cognito_client"
"Bug Tracker" = "https://github.com/developmentseed/cognito_client/issues"